--- a/index.html
+++ b/index.html
@@ -18,25 +18,28 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-  <main>
-    <div class="hero-image">
+<body class="body">
+  <main class="main">
+    <div class="hero">
       <!-- <img src="./images/image-equilibrium.jpg" src="equilibrium nft image"/> -->
     </div>
-    <h1 class="white-font headding-font active-cyan">
-      Equilibrium #3429
-    </h1>
-    <h2 class="body-font">
-      Our Equilibrium collection promotes balance and calm.
-    </h2>
-    <div class="detail">
-      <span class="cost cyan-font caption-bold-font">0.041 ETH</span>
-      <span class="time-left caption-bold-font">3 days left</span>     
+    <div class="content">
+      <h1 class="content__title title white-font headding-font active-cyan">
+        Equilibrium #3429
+      </h1>
+      <h2 class="content__caption body-font">
+        Our Equilibrium collection promotes balance and calm.
+      </h2>
+      <div class="detail">
+        <span class="cost cyan-font caption-bold-font">0.041 ETH</span>
+        <span class="time-left caption-bold-font">3 days left</span>     
+      </div>
+      <div class="creator">
+        <img src="./images/image-avatar.png" alt="avatar of the creator"/>
+        <span class="caption-font">Creation of</span> 
+        <span class="white-font caption-font active-cyan">Jules Wyvern</span>
     </div>
-    <div class="creator">
-      <img src="./images/image-avatar.png" alt="avatar of the creator"/>
-      <span class="caption-font">Creation of</span> 
-      <span class="white-font caption-font active-cyan">Jules Wyvern</span>
+  
     </div>
   
     <footer>
