still working on BEM. I will be out for a couple weeks...

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <h2 class="content__caption body-font">
         Our Equilibrium collection promotes balance and calm.
       </h2>
-      <div class="detail">
-        <span class="cost cyan-font caption-bold-font">0.041 ETH</span>
-        <span class="time-left caption-bold-font">3 days left</span>     
+      <div class="content__detail">
+        <span class="content__detail_cost cost cyan-font caption-bold-font">0.041 ETH</span>
+        <span class="content__detail_timeleft caption-bold-font">3 days left</span>     
       </div>
-      <div class="creator">
+      <div class="content__creator">
         <img src="./images/image-avatar.png" alt="avatar of the creator"/>
         <span class="caption-font">Creation of</span> 
         <span class="white-font caption-font active-cyan">Jules Wyvern</span>
