--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
       <!-- <img src="./images/image-equilibrium.jpg" src="equilibrium nft image"/> -->
     </div>
     <div class="content">
-      <h1 class="content__title title white-font headding-font active-cyan">
+      <h1 class="content__title">
         Equilibrium #3429
       </h1>
-      <h2 class="content__caption body-font">
+      <h2 class="content__caption">
         Our Equilibrium collection promotes balance and calm.
       </h2>
       <div class="content__detail">
-        <span class="content__detail_cost cost cyan-font caption-bold-font">0.041 ETH</span>
-        <span class="content__detail_timeleft caption-bold-font">3 days left</span>     
+        <span class="content__detail--cyan content__detail--left">0.041 ETH</span>
+        <span class="content__detail content__detail--right">3 days left</span>     
       </div>
-      <div class="content__creator">
-        <img src="./images/image-avatar.png" alt="avatar of the creator"/>
-        <span class="caption-font">Creation of</span> 
-        <span class="white-font caption-font active-cyan">Jules Wyvern</span>
+      <div class="creator">
+        <img class="creator__avatar" src="./images/image-avatar.png" alt="avatar of the creator"/>
+        <span>Creation of</span> 
+        <span class="creator__name">Jules Wyvern</span>
     </div>
   
     </div>
